# switchblade-legacy-compatibility

./: .gitignore  AGENTS.md  BUILD_PLAN.md  HANDOFF.md  LICENSE  PRODUCT_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  windows-package.yml
app/: __init__.py  inventory.py  legacy_compat.py  repair.py  ui.py
captures/: README.md
docs/: ADB_VISION_SETUP.md  BRIGHTNESS_MEMORY.md  HARDWARE_MEMORY.md  RELEASE_ACCEPTANCE.md  RESTORE_SAFETY_SPEC.md
installer/: SwitchbladeLegacyCompatibility.iss
scripts/: package_smoke.ps1
tests/: __init__.py  test_inventory.py  test_legacy_compat.py  test_packaging.py  test_repair.py  test_ui.py
tests/fixtures/inventory/: ambiguous.json  healthy.json  missing-device.json  repairable.json  unsupported.json  winusb.json
tools/: README.md  __init__.py  legacy_brightness_probe.py  trace_rzappmanager.py
